# lab

./: .gitignore  AGENTS.md  CONTEXT.md  CONTRIBUTING.md  Justfile  PLAN.md  README.md  RUNBOOK.md  SECURITY.md  WORKFLOWS.md  agents.md  astro.config.mjs  dakota-build-monitor-TODO.md  dakota-iteration1-report.md  dakota-iteration2-manifest.yaml  dakota-iteration2-report.md  dakota-registry-manifest-current.json  drive-dakota-loop.sh  fix-zot.patch  fix.patch  fix_dnf.py  fix_ldpreload.py  flatcar-clone-prototype.py  issue_52.json  issue_54.json  issue_56.json  issue_57.json  issue_62.json  issue_63.json  issue_70.json  issue_71.json  issue_72.json  overnight-seed-build-plan.md  package-lock.json  package.json  patch.py  patch_fedora.py  patch_fedora_again.py  patch_hummingbird.py  patch_images.py  (+6 more)
.agents/: ORIGINAL_REQUEST.md
.githooks/: pre-commit
.github/: actionlint.yaml  copilot-instructions.md
argo/: bluefin-service-catalog-smoke.yaml  bluefin-smoke-test.yaml  bluefin-test-matrix.yaml  flatcar-smoke-test.yaml  gnomeos-access-spike.yaml  homelab-access-probe.yaml  homelab-restore-drill.yaml  homelab-storage.yaml  homelab-substrate.yaml  one-shot-delete-golden-disks.yaml  rechunk-to-chunkah-migration.yaml  test-find-vmlinuz.yaml  test-installer-build.yaml  upstream-gnome-terminal-bluefin.yaml  upstream-gnome-terminal-titan.yaml
argocd/: application.yaml  arc-controller-app.yaml  arc-runners-app.yaml  argo-workflows-app.yaml  botkube-app.yaml  flatcar-update-app.yaml  infra-application.yaml
bootc-1.16.2/: .bootc-dev-infra-commit.txt  .dockerignore  .gitignore  ADOPTERS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  GOVERNANCE.md  Justfile  MAINTAINERS.md  Makefile  README.md  bcvk.just  deny.toml
bootc-1.16.2/crates/etc-merge/: Cargo.toml
bootc-1.16.2/crates/etc-merge/src/: lib.rs
bootc-1.16.2/crates/initramfs/: Cargo.toml  bootc-root-setup.service
bootc-1.16.2/crates/initramfs/dracut/: module-setup.sh
bootc-1.16.2/crates/initramfs/src/: lib.rs  main.rs
bootc-1.16.2/crates/kernel_cmdline/: Cargo.toml
bootc-1.16.2/crates/kernel_cmdline/src/: bytes.rs  lib.rs  utf8.rs
bootc-1.16.2/crates/tests-integration/: Cargo.toml  README.md
bootc-1.16.2/crates/tests-integration/src/: anaconda.rs  container.rs  install.rs  system_reinstall.rs  tests-integration.rs
bootc-1.16.2/crates/xtask/: Cargo.toml
bootc-1.16.2/crates/xtask/src/: bcvk.rs  buildsys.rs  man.rs  sysext.rs  tmt.rs  xtask.rs
botkube/: values.yaml
bst-prototype/: hello.world  project.conf
docs/: CNAME  DOCUMENTATION-OVERHAUL.md  README.md  REVIEW-2026-05-26.md  WORKFLOWS.md  agent-cheatsheet.md  architecture.md  bluefin-integration.md  bootstrap.md  cluster-improvement-plan.md  cluster-ops.md  dogtail-testing.md  ghost-lab-architecture.md  homelab-contracts.md  index.html  k3s-tuning.md  lab-operations.md  maintainer-onboarding.md  prototype-factory.html  release.md  testing.md  vanguard-report-template.md
manifests/: arc-runner-work-rbac.yaml  argo-default-sa-rbac.yaml  argo-server-auth.yaml  argo-server-nodeport.yaml  argo-server-replicas.yaml  argo-server-scheduling-reset.yaml  argocd-tuning.yaml  aurora-test-namespace.yaml  bluefin-test-ssh-pubkey.yaml  bst-artifact-server.yaml  bst-build-priorityclass.yaml  bst-cache-proxy.yaml  build-workload-admission.yaml  buildbarn-config.yaml  buildbarn-frontend.yaml  buildbarn-namespace.yaml  buildbarn-pdb.yaml  buildbarn-remote-asset.yaml  buildbarn-scheduler.yaml  buildbarn-storage.yaml  buildbarn-worker.yaml  buildbox-casd.yaml  buildstream-remote-cache-config.yaml  cdi-insecure-registry.yaml  cluster-snapshot-cron.yaml  dakota-commit-poller.yaml  dakota-pr-import-poller.yaml  digest-watch-cron.yaml  flatcar-kernel-lifecycle-state.yaml  flatcar-kernel-poller.yaml  flatcar-kernel-polling-state.yaml  flatcar-kernel-rbac.yaml  flatcar-test-namespace.yaml  flatcar-update-configurator.yaml  flatcar-update-namespace.yaml  flatcar-update-nebraska.yaml  flatcar-update-postgres.yaml  gnomeos-smbios-hook.yaml  gnomeos-test-namespace.yaml  golden-disk-gc.yaml  (+71 more)
notebooks/: 01_pass_rate_wilson.ipynb  requirements.txt
plans/: flatcar.fmf  main.fmf
scripts/: check_gitops_policy.py  collect_app_resources.py  (+10 more)
(+836 files in other folders)
