[package]
name = "bootc-initramfs-setup"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2024"
publish = false

[dependencies]
anyhow.workspace = true
cap-std-ext.workspace = true
clap = { workspace = true, features = ["std", "help", "usage", "derive"] }
libc.workspace = true
rustix.workspace = true
serde = { workspace = true, features = ["derive"] }
composefs-ctl.workspace = true
toml.workspace = true
tracing.workspace = true
fn-error-context.workspace = true
bootc-kernel-cmdline =  { path = "../kernel_cmdline", version = "0.0.0" }

[lints]
workspace = true

[features]
default = ['pre-6.15']
rhel9 = ['composefs-ctl/rhel9']
'pre-6.15' = ['composefs-ctl/pre-6.15']
