# Our integration tests
[package]
name = "tests-integration"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2024"
publish = false

[[bin]]
name = "tests-integration"
path = "src/tests-integration.rs"

[dependencies]
# Workspace dependencies
anyhow = { workspace = true }
camino = { workspace = true }
cap-std-ext = { workspace = true }
clap = { workspace = true, features = ["derive","cargo"] }
fn-error-context = { workspace = true }
indoc = { workspace = true }
rustix = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tempfile = { workspace = true }
xshell = { workspace = true }
bootc-kernel-cmdline = { path = "../kernel_cmdline", version = "0.0.0" }

# Crate-specific dependencies
# bcvk-qemu: QEMU/virtiofsd management from the bcvk project.
# This is a git dependency — not published to crates.io.
# When updating, also check the bcvk-qemu Cargo.toml for its own
# dependency versions (cap-std-ext, etc.) to avoid conflicts.
bcvk-qemu = { git = "https://github.com/bootc-dev/bcvk", rev = "22a4223d4101cb3f9306e942a79ceb13f173927e" }
data-encoding = "2.9"
indicatif = { workspace = true }
libtest-mimic = "0.8.0"
oci-spec = "0.10.0"
rand = "0.10"
rexpect = "0.7"
scopeguard = "1.2.0"
tar = "0.4"
tokio = { workspace = true, features = ["rt", "macros"] }

[lints]
workspace = true
